tests/errors/invalid-interface-output.fil
extern "dummy.sv" {
  comp Main<G, L>(
    @interface[G, G+1] go_G: 1,
    @[G, G+1] in1: 32,
  ) -> (
    @[G+2, G+4] out: 1,
  );
}
